crates/carta/tests/snapshots/golden_writer__ipynb__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "1.  outer\n",
    "\n",
    "    1.  inner one\n",
    "    2.  inner two"
   ],
   "id": "4c707343-6d6d-4822-a552-6200f07735f8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
