crates/carta/tests/snapshots/golden_writer__ipynb__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "1.  five\n",
    "2.  six"
   ],
   "id": "29a0c5e0-0146-425c-9251-98fa19f4ab38"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
