crates/carta/tests/snapshots/golden_writer__ipynb__common__ordered-upper-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "A. one B. two"
   ],
   "id": "8655d0ae-ac0b-4e60-bd98-534207809af0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
