crates/carta/tests/snapshots/golden_writer__ipynb__common__ordered-upper-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "1.  one\n",
    "2.  two"
   ],
   "id": "fb76592d-05bf-42fe-9d3a-1015bc9ee2f8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
