crates/carta/tests/snapshots/golden_writer__ipynb__common__para-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "This is a deliberately long paragraph with enough words that the writer\n",
    "must wrap it across the fill column boundary at least once or twice."
   ],
   "id": "682cc8f2-4b13-4d6d-835a-08759924b7fc"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
