crates/carta/tests/snapshots/golden_writer__ipynb__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "a simple paragraph with words"
   ],
   "id": "50e885ea-45de-4da9-8073-dd67467e0c66"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
