crates/carta/tests/snapshots/golden_writer__ipynb__common__quoted-smart.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "She said “hello” and ‘hi’."
   ],
   "id": "c0b27055-f698-4f24-a2e4-ace22343e788"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
