crates/carta/tests/snapshots/golden_writer__ipynb__common__raw-html-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "raw block"
   ],
   "id": "7894d5db-f1c4-4274-a4e7-3c232ff8f290"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
