crates/carta/tests/snapshots/golden_writer__ipynb__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "text <cite>raw</cite> more"
   ],
   "id": "f12c7495-adc9-4fd0-96c4-beedcbeef6b0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
