crates/carta/tests/snapshots/golden_writer__ipynb__common__raw-latex-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [],
   "id": "07fc2807-b4bd-4d5d-9707-ae596c96e438"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
