crates/carta/tests/snapshots/golden_writer__ipynb__common__raw-latex-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "a b"
   ],
   "id": "fb88a430-adf1-43ba-b9eb-637b6f8ebf8c"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
