crates/carta/tests/snapshots/golden_writer__ipynb__common__smart-ellipsis-dashes.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "wait… an en–dash and an em—dash"
   ],
   "id": "3e7a307e-958d-476f-9fc0-e49be65f5d66"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
